--- a/player.html
+++ b/player.html
@@ -28,7 +28,7 @@ usevisualizer: "real",
 visualizertype: "6", 
 metadatatechnic: "",
 ownmetadataurl: "", 
-streamurl: "http://stream.zeno.fm/2qnwf47mc0hvv", 
+streamurl: "https://stream.zeno.fm/2qnwf47mc0hvv", 
 streamtype: "centova", //shoutcast2, icecast2, radiozeno, radionomy, radiojar, radioco
 icecastmountpoint: "",
 shoutcastpath: "/stream",
