--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
  </head>
  <body>
+           <!-- Redes Sociales -->
+        <div class="slideshow-container" style="text-align: center; line-height:0;">
+		   <a href="https://play.google.com/store/apps/details?id=com.app.aforcomision" target="_blank">
+                <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:325px">
+            </a>
+		
+            <a href="https://www.facebook.com/iclgc?mibextid=ZbWKwL" target="_blank">
+                <img src="images/bottom/bottom-facebook.webp" alt="" title="facebook.com/" style="width:325px">
+            </a>
+
+            <a href="https://instagram.com/iglesialagrancomision?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" target="_blank">
+                <img src="images/bottom/bottom-instagram.webp" alt="" title="instagram.com/" style="width:325px">
+            </a>
+            <a href="https://youtube.com/@ICGCTV" target="_blank">
+                <img src="images/bottom/bottom-youtube.png" alt="" title="youtube.com/" style="width:325px">
+            </a>
+		
+         
+        </div>
 
   <div class="clearfix borderbox" id="page"><!-- column -->
    <div class="position_content" id="page_position_content">
