--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 		   <a href="https://play.google.com/store/apps/details?id=com.app.aforcomision" target="_blank">
                 <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:180px">
             </a>
+		 <a href="https://play.google.com/store/apps/details?id=com.app.aforcomision" target="_blank">
+                <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:180px">
+            </a>
 		
             
 
