--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
            <!-- Redes Sociales -->
         <div class="slideshow-container" style="text-align: center; line-height:0;">
-		   <a href="https://play.google.com/store/apps/details?id=com.app.aforcomision" target="_blank">
+		   <a href="https://detroitmedia.github.io/Channel/" target="_blank">
                 <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:180px">
             </a>
 		 <a href="https://play.google.com/store/apps/details?id=com.app.aforcomision" target="_blank">
-                <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:180px">
+                <img src="images/bottom/bottom-google01.jpg" alt="" title="play.google.com/" style="width:180px">
             </a>
 		
             
