--- a/player.html
+++ b/player.html
@@ -19,7 +19,7 @@ hightlightcolor: "#fb1b00",
 fontname: "Anton", 
 googlefont: "Anton&display=swap",
 fontratio: "0.3", 
-radioname: "Phoenix Radio HD", 
+radioname: <marquee> "Phoenix Radio HD", </marquee>
 scroll: "true", 
 coverimage: "images/lati.jpg",
 onlycoverimage: "false",
