--- a/player.html
+++ b/player.html
@@ -18,8 +18,8 @@ fontcolor: "#000000",
 hightlightcolor: "#fb1b00", 
 fontname: "Anton", 
 googlefont: "Anton&display=swap",
-fontratio: "0.3", 
-radioname: <marquee> "Phoenix Radio HD", </marquee>
+fontratio: "0.2", 
+radioname: "Phoenix Radio HD", 
 scroll: "true", 
 coverimage: "images/lati.jpg",
 onlycoverimage: "false",
