--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <!-- Redes Sociales -->
         <div class="slideshow-container" style="text-align: center; line-height:0;">
 		   <a href="https://latidoromantica.github.io/radio/" target="_blank">
-                <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:190;px">
+                <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:190px">
             </a>
 		 <a href="https://detroitmedia.github.io/Channel/" target="_blank">
                 <img src="images/bottom/bottom-google01.jpg" alt="" title="play.google.com/" style="width:190px">
