--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <link rel="apple-touch-startup-image" href="./img/logo.png">
         <link rel="manifest" href="./manifest.json"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-        <meta name="description" content="Aforcomision">
-        <meta property="og:title" content="Aforcomision">
+        <meta name="description" content="phoenixradio">
+        <meta property="og:title" content="phoenixradio">
         <meta property="og:image" content="./img/logo.png">
-        <meta property="og:site_name" content="Aforcomision">
-        <meta property="og:description" content="Aforcomision">
-        <meta property="og:url" content="https://iclgc.com">
+        <meta property="og:site_name" content="phoenixradio">
+        <meta property="og:description" content="phoenixradio">
+        <meta property="og:url" content="https://phoenixradiohd.github.io/live/">
         <meta name="author" content="@radios_HD"/>
         <meta name="copyright" content="@radios_HD" />
         <meta name="keywords" content="radio, Venezuela, online, streaming, musica, venezuela.">
@@ -75,14 +75,14 @@
 
     <!-- Footer -->
     <footer id="footer" style="font-family: rimouski sb">
-        <h2><a href="https://www.iclgc.com/"></a></h2>
+        <h2><a href="https://phoenixradiohd.github.io/live/"></a></h2>
     </footer>
 <!-- GetButton.io widget -->
 <script type="text/javascript">
     (function () {
         var options = {
-            whatsapp: "584246188379", // WhatsApp number
-            call_to_action: "ENVIAR MENSAJE", // Call to action
+            whatsapp: "584149616177", // WhatsApp number
+            call_to_action: "PHOENIX RADIO HD", // Call to action
             position: "right", // Position may be 'right' or 'left'
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
