--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     (function () {
         var options = {
             whatsapp: "584149616177", // WhatsApp number
-            call_to_action: "PHOENIX RADIO HD", // Call to action
+            call_to_action: "ENVIAR MENSAJE", // Call to action
             position: "right", // Position may be 'right' or 'left'
         };
         var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
