--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <img src="images/bottom/bottom-google.jpg" alt="" title="play.google.com/" style="width:325px">
             </a>   
 		
-            <a href="https://detroitmedia.github.io/Channel/" target="_blank">
+            <a href="https://detroitchannel.github.io/tv/" target="_blank">
                 <img src="images/bottom/bottom-facebook.jpg" alt="" title="detroitchannel.com/" style="width:325px">
             </a>
 
